--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -97,8 +97,8 @@ h4 {
 
 	@include lg {
 		font-weight: 200;
-		font-size: rem-calc(37);
-		line-height: rem-calc(35);
+		font-size: rem-calc(35);
+		line-height: rem-calc(32);
 	}
 }
 
