--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -86,8 +86,8 @@
                 }
             
                 @include lg {
-                    font-size: rem-calc(80);
-                    line-height: rem-calc(70);
+                    font-size: rem-calc(75);
+                    line-height: rem-calc(65);
                 }
             }
 
