--- a/dev/scss/sections/_play-content.scss
+++ b/dev/scss/sections/_play-content.scss
@@ -30,13 +30,13 @@
     grid-template-columns: 20px auto 20px;
     @include md{
         grid-template-areas: ". container container";
-        grid-template-columns: 5% auto 5%;
+        grid-template-columns: 5vw auto 5vw;
         padding-bottom: 100px;
     }
-    @include xl {
-        grid-template-columns: auto 1440px auto;
-        padding-bottom: 80px;
-    }
+    // @include xl{
+    //     grid-template-columns: auto 1440px auto;
+    //     padding-bottom: 80px;
+    // }
     #play-prj-container{
         grid-area: container;
         #play-prj-grid-container{
